# OpenVINO_Tutorial

./: LICENSE  README.md
0_Utils/: eval_alexnet.py  eval_alexnet_ov.py  eval_alexnet_pt.py  export_model.py  ov_helper.py
0_Utils/model_hack/: alexnet.py  alexnet_srelu.py  alexnet_srelu_symbol.py  srelu.py
0_Utils/srelu_cpp/: CMakeLists.txt  ov_extension.cpp  srelu.cpp  srelu.hpp
1_Compile/: README.md  main.cpp
2_Extend/: readme.md
2_Extend/cpp_extend/: CMakeLists.txt  ov_extension.cpp
2_Extend/cpp_infer_with_ext/: CMakeLists.txt  complex_mul.cpp  main.cpp  readme.md
2_Extend/cpp_infer_with_so/: main.cpp  readme.md
2_Extend/model_export/: complex_mul.py  export_model.py
2_Extend/py_infer/: test_ext.py
3_Create/: README.md  alexnet.py  gen_alexnet_pth.py  gen_alexnet_wts.py
4_Scalpel/: readme.md  scalpel.py
debug/: file2tensor.py
spalpel/: readme.md  spalpel.py
